@@ -8,6 +8,7 @@ DESIGN
 
 HIGH
 - create quick-and-dirty examples of each type of challenge
+- delete test buttons (dead code) in PlayNode
 
 MEDIUM
 
@@ -19,3 +20,4 @@ MIGRATE TO COMMON
 GameTimer, copied from BCE and RPAL
 RewardNode, copied and adapted from BCE and RPAL
 "game phase" framework
+standardize and move game strings to phetcommon? (Check, Try Again, Show Answer, Next)
